--- a/Desafio, Galeria.html
+++ b/Desafio, Galeria.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+    <!-- Cabeçalho e Configurações de Estilização-->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -61,6 +62,7 @@
         }
     </style>
 </head>
+<!-- Configurações de Corpo -->
 <body>
     <header>
         Galeria de Fotos
@@ -85,7 +87,8 @@
         © 2024 Galeria de Fotos. Todos os direitos reservados.
     </footer>
 
-    <!-- Bootstrap Bundle with Popper -->
+    <!-- Comando de Integração de API -->
+     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
     <script>
         const apiKey = 'Absg5KUIfR4S40kTLwC8y1QmcqXrtK1AeOSyiCxIhV2z1nh37oecoUlk'; // Substitua com sua chave de API do Pexels
